--- a/cards/index.html
+++ b/cards/index.html
@@ -21,9 +21,9 @@
             </div>
         </div>
         <div class="decor-container">
-                <img src="./images/yellow-circle.png" alt="" class="decor-container__yellow-circle">
-                <img src="./images/grey-sprinkles.png" alt="" class="decor-container__grey-sprinkles">
-                <img src="./images/brown-sprinkles.png" alt="" class="decor-container__brown-sprinkles">
+            <img src="./images/yellow-circle.png" alt="" class="decor-container__yellow-circle">
+            <img src="./images/grey-sprinkles.png" alt="" class="decor-container__grey-sprinkles">
+            <img src="./images/brown-sprinkles.png" alt="" class="decor-container__brown-sprinkles">
         </div>
         <div class="main-container__header">
             <p class="main-container__title">Категории</p>
@@ -32,32 +32,60 @@
         <div class="main-container__cards">
             <div class="main-container__cards-row">
                 <div class="card">
+                    <div class="inivisible"></div>
                     <p class="card__title">Пестициды</p>
-                    <img src="./images/card1_1.png" alt="" class="card__image" data-hover="./images/card1_2.png">
-                    <img src="./images/elipse/elipse1_1.png" alt="" class="card__bubble-big">
-                    <img src="./images/elipse/elipse1_2.png" alt="" class="card__bubble-little">
+                    <img src="./images/card1_1.png" alt="card-img" class="card__image"
+                        data-hover="./images/card1_2.png">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="200"
+                        height="200">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="150"
+                        height="150">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="50"
+                        height="50">
                 </div>
                 <div class="card">
+                    <div class="inivisible"></div>
                     <p class="card__title">Культуры</p>
-                    <img src="./images/card2_1.png" alt="" class="card__image" data-hover="./images/card2_2.png">
-                    <img src="./images/elipse/elipse1_1.png" alt="" class="card__bubble-big">
-                    <img src="./images/elipse/elipse1_2.png" alt="" class="card__bubble-little">
+                    <img src="./images/card2_1.png" alt="card-img" class="card__image"
+                        data-hover="./images/card2_2.png">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="200"
+                        height="200">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="150"
+                        height="150">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="50"
+                        height="50">
                 </div>
                 <div class="card">
+                    <div class="inivisible"></div>
                     <p class="card__title">Вредители</p>
-                    <img src="./images/card3_1.png" alt="" class="card__image" data-hover="./images/card3_2.png">
-                    <img src="./images/elipse/elipse1_1.png" alt="" class="card__bubble-big">
-                    <img src="./images/elipse/elipse1_2.png" alt="" class="card__bubble-little">
+                    <img src="./images/card3_1.png" alt="card-img" class="card__image"
+                        data-hover="./images/card3_2.png">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="200"
+                        height="200">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="150"
+                        height="150">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="50"
+                        height="50">
                 </div>
                 <div class="card">
+                    <div class="inivisible"></div>
                     <p class="card__title">Действующие вещества</p>
-                    <img src="./images/card4_1.png" alt="" class="card__image" data-hover="./images/card4_2.png">
-                    <img src="./images/elipse/elipse1_1.png" alt="" class="card__bubble-big">
-                    <img src="./images/elipse/elipse1_2.png" alt="" class="card__bubble-little">
+                    <img src="./images/card4_1.png" alt="card-img" class="card__image"
+                        data-hover="./images/card4_2.png">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="200"
+                        height="200">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="150"
+                        height="150">
+                    <img src="./images/elipse/elipse1_1.png" alt="bubble-img" class="card__bubble" width="50"
+                        height="50">
                 </div>
             </div>
         </div>
-        
+
     </div>
     <script src="script.js"></script>
 </body>
